# 2d-game

./: .gitignore  CMakeLists.txt  build.sh  compile.sh  run.sh
game/: edit.sh  list.sh
game/include/: aabb.h  building.h  button.h  callback_utils.h  camera.h  character.h  collision.h  entity.h  game.h  geometry.h  gl_error_manager.h  globals.h  label.h  map.h  npc.h  player.h  renderer.h  resource_manager.h  resource_manager.inl  scene.h  shader.h  sprite.h  sprite_renderer.h  texture.h  tile_world.h  time_manager.h  ui.h  util.h
game/src/: aabb.cpp  building.cpp  button.cpp  camera.cpp  character.cpp  collision.cpp  entity.cpp  game.cpp  gl_error_manager.cpp  label.cpp  main.cpp  map.cpp  npc.cpp  player.cpp  renderer.cpp  resource_manager.cpp  scene.cpp  shader.cpp  sprite.cpp  sprite_renderer.cpp  texture.cpp  tile_world.cpp  time_manager.cpp  ui.cpp
